# x-algorithm

./: .gitignore  README.md  SENTINELPIPE_BLOG.md  SENTINELPIPE_CONTEXT_DUMP.md  SENTINELPIPE_DESIGN.md
docs/for-you-feed/: README.md  architecture.md  candidate-pipeline.md  edge-cases.md  home-mixer.md  operations.md  phoenix.md  thunder.md
sentinelpipe/: AGENTIC_REDTEAM_ARCHITECTURE.md  Cargo.toml  GAZETENT_V2_PRODUCT_PLAN.md  README.md  SECURITY.md  USER_GUIDE.md  WHITE_PAPER.md  gazetentwhitepaper_research_paper_revised.md  security_best_practices_report.md
sentinelpipe/.agents/skills/sentinelpipe-redteam/: SKILL.md
sentinelpipe/.agents/skills/sentinelpipe-redteam/agents/: openai.yaml
sentinelpipe/benchmarks/2026-03-11_ollama_head_to_head_gemma4b/: PUBLIC_SUMMARY.json  REPORT.md  doctor_gemma3_uncensored_4b.json  doctor_llama3_2_1b.json  gemma3_uncensored_4b_serial_run.json
sentinelpipe/benchmarks/2026-03-11_ollama_head_to_head_gemma4b/artifacts/a1858319-4423-4ff6-828c-2374ada3b5de/: findings.jsonl  summary.json
sentinelpipe/benchmarks/2026-03-11_ollama_head_to_head_gemma4b/artifacts/e8cfc05d-f91f-4332-bbbf-4953d23f41b7/: findings.jsonl  summary.json
sentinelpipe/benchmarks/2026-03-11_ollama_head_to_head_gemma4b/configs/: gemma3_uncensored_4b.yaml  llama3_2_1b.yaml
sentinelpipe/examples/: run-ollama.yaml  run-openrouter.yaml  run.yaml
sentinelpipe/examples/packs/: authority_spoofing.yaml  basic_injection.yaml  canary_leak.yaml  delegation_hijack.yaml  encoding_evasion.yaml  jailbreak_suffix.yaml  long_context_override.yaml  markdown_injection.yaml  memory_poisoning.yaml  multilingual_evasion.yaml  persistent_session.yaml  policy_override.yaml  rag_exfiltration.yaml  roleplay_bypass.yaml  schema_bypass.yaml  summarization_leakage.yaml  tool_abuse.yaml
sentinelpipe/gazetent-web/: Cargo.toml
sentinelpipe/gazetent-web/src/: main.rs
sentinelpipe/gazetent-web/static/: app.css  app.js
sentinelpipe/integrations/pi-redteam/: COMMANDS.md
sentinelpipe/sentinelpipe-cli/: Cargo.toml
sentinelpipe/sentinelpipe-cli/src/: lib.rs  main.rs
sentinelpipe/sentinelpipe-core/: Cargo.toml
sentinelpipe/sentinelpipe-core/src/: lib.rs
sentinelpipe/sentinelpipe-mcp/: Cargo.toml  TOOLS.md
sentinelpipe/sentinelpipe-mcp/src/: main.rs
sentinelpipe/sentinelpipe-packs/: Cargo.toml
sentinelpipe/sentinelpipe-packs/src/: lib.rs
sentinelpipe/sentinelpipe-pipeline/: Cargo.toml
sentinelpipe/sentinelpipe-pipeline/src/: lib.rs
sentinelpipe/sentinelpipe-scorers/: Cargo.toml
sentinelpipe/sentinelpipe-scorers/src/: lib.rs
sentinelpipe/sentinelpipe-targets/: Cargo.toml
sentinelpipe/sentinelpipe-targets/src/: lib.rs
