[package]
name = "gazetent-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = "1"

sentinelpipe-core = { path = "../sentinelpipe-core" }
sentinelpipe-pipeline = { path = "../sentinelpipe-pipeline" }
sentinelpipe-targets = { path = "../sentinelpipe-targets" }
sentinelpipe-packs = { path = "../sentinelpipe-packs" }
sentinelpipe-scorers = { path = "../sentinelpipe-scorers" }
sentinelpipe-cli = { path = "../sentinelpipe-cli" }
