[package]
name = "sentinelpipe-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

sentinelpipe-core = { path = "../sentinelpipe-core" }
sentinelpipe-packs = { path = "../sentinelpipe-packs" }
sentinelpipe-pipeline = { path = "../sentinelpipe-pipeline" }
sentinelpipe-scorers = { path = "../sentinelpipe-scorers" }
sentinelpipe-targets = { path = "../sentinelpipe-targets" }

[lib]
name = "sentinelpipe_cli"
path = "src/lib.rs"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
serde_json = "1"
