[package]
name = "sentinelpipe-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }

sentinelpipe-core = { path = "../sentinelpipe-core" }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
