[package]
name = "sentinelpipe-targets"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

sentinelpipe-core = { path = "../sentinelpipe-core" }
sentinelpipe-pipeline = { path = "../sentinelpipe-pipeline" }

[dev-dependencies]
httpmock = "0.7"
uuid = { version = "1", features = ["v4"] }
